force-app/main/W-001393-Recall/objects/Recall_Item__c/Recall_Item__c.object-meta.xml
<CustomObject>
    <label>Recall Item</label>
    <nameField>
        <displayFormat>RI-{00000000}</displayFormat>
        <label>REF</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Recall Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>