force-app/main/W-001393-Recall/objects/Recall_Item__c/fields/Dealer_Entity_Id__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Entity_Id__c</fullName>
    <label>Dealer Entity Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>