force-app/main/W-001393-Recall/objects/Recall_Item__c/fields/Recall_Model__c.field-meta.xml
<CustomField>
    <fullName>Recall_Model__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recall Model</label>
    <referenceTo>Recall_Model__c</referenceTo>
    <relationshipLabel>Recall Items</relationshipLabel>
    <relationshipName>Recall_Items</relationshipName>
    <type>Lookup</type>
</CustomField>